# jounce

./: .env.example  .gitignore  10_ISSUES_FOUND.md  20_APPS_PLAN.md  ACCOMPLISHMENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_ARCHIVE.md  CLAUDE_ARCHIVE_SESSION_16.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE_ANALYSIS.md  DEVELOPER_TOOLS_PRIORITY.md  DOCS_CHECKLIST.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_ROADMAP.md  DOUBLE_COLON_OPERATOR.md  EXAMPLE_APPS.md  EXAMPLE_APPS_PLAN.md  FEATURES.md  FEATURE_1_SECURITY_PROGRESS.md  GETTING_STARTED.md  GOTCHA_FIXES.md  ISSUES_TRACKER.md  JOUNCE_SPEC.md  JOURNEY_RETROSPECTIVE.md  LANGUAGE_FEATURES_TO_ADD.md  LEARN_JOUNCE.md  LICENSE  LIVE_RELOAD.md  Makefile  MergeJoke  PACKAGES_ROADMAP.md  PHASE_13_COMPLETE.md  PHASE_13_STATUS.md  PHASE_14_PROGRESS.md  PHASE_15_ANALYSIS.md  PHASE_17_AUTONOMOUS_WORK_PLAN.md  PHASE_17_COMPLETION_SUMMARY.md  (+226 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/: 11_todo_list.jnc
archive/: CLEANUP_SUMMARY.md  README.md  ROADMAP_OLD_Q1_2026.md  SPRINT_15_1_PLAN.md
benches/: README.md  cache_performance.rs  compiler_bench.rs  utility_generation.rs
docs/: BUILD_OPTIMIZATIONS.md  CLI_BUILD_FLAGS.md  COMPONENT_PROPS_GUIDE.md  CSS_UTILITIES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TOOLING.md  ERROR_MESSAGES.md  GETTING_STARTED_QUICK.md  JOUNCE_DO_AND_DONT.md  PHASE_1_COMPLETE.md  PHASE_1_FINAL_STATUS.md  PRODUCTION_READY_SUMMARY.md  README.md  RELEASE_PROCESS.md  SECURITY_SYSTEM.md  TESTING_GUIDE.md  styling.md
docs-site/: vercel.json
examples/: DEPLOYMENT_GUIDE.md  README.md  async_await_demo.raven  basic_functions.jnc  collections_demo.jnc  greeting_card.raven  jounce.config.example.toml  macro_demo.jnc  math_demo.raven  optimizer_demo.jnc  shopping_app.raven  simple_lambda.raven  (+13 more)
(+719 files in other folders)
