[package]
name = "jounce"
version = "0.4.0"
edition = "2021"
description = "The Jounce language compiler and toolchain"

[lib]
name = "jounce_compiler"
path = "src/lib.rs"

[[bin]]
name = "jnc"
path = "src/main.rs"

[[example]]
name = "error_examples"
path = "examples/error_examples.rs"

[[example]]
name = "http_client_demo"
path = "examples/http_client_demo.rs"

[[bench]]
name = "compiler_bench"
path = "benches/compiler_bench.rs"
harness = false

[[bench]]
name = "utility_generation"
path = "benches/utility_generation.rs"
harness = false

[[bench]]
name = "cache_performance"
path = "benches/cache_performance.rs"
harness = false

[dependencies]
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
wasm-encoder = "0.201.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
semver = "1.0"
rpassword = "7.3"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
base64 = "0.21"
dirs = "5.0"
urlencoding = "2.1"
colored = "2.1"
regex = "1.10"

# Performance Optimization (Phase 9 Sprint 1)
xxhash-rust = { version = "0.8", features = ["xxh64"] }  # Fast hashing for cache keys
rmp-serde = "1.1"                                         # MessagePack serialization
rayon = "1.8"                                            # Parallel compilation
num_cpus = "1.16"                                        # CPU detection
dashmap = "5.5"                                          # Concurrent HashMap

[dev-dependencies]
criterion = "0.5"